works page fixed with flexbox alignment. removed tagline because of imbalance with alignment and looked clunky. uneeded.

--- a/client/stylesheets/css/main.css
+++ b/client/stylesheets/css/main.css
@@ -559,10 +559,28 @@ div[class*=-p] {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  padding: 10rem 0; }
+  padding: 8rem 0; }
+  @media only screen and (max-width: 48rem) {
+    .cases {
+      flex-direction: column; }
+      .cases div[class*="case-description"] {
+        margin: 0 auto; } }
+  @media only screen and (min-width: 76.9rem) and (max-width: 180rem) {
+    .cases {
+      align-items: center; }
+      .cases div[class*="case-description"] {
+        align-self: flex-start;
+        order: 1; }
+      .cases div[class*="cases-prototype-"] {
+        order: 2;
+        flex: 2; }
+      .cases div[class*="case-details"] {
+        align-self: center;
+        order: 3; } }
 
 .cases > div {
-  flex: 1; }
+  flex: 1;
+  padding: 1rem 0 0; }
 
 .case-p img {
   width: 75%;
