--- a/client/stylesheets/sass/_cases.scss
+++ b/client/stylesheets/sass/_cases.scss
@@ -1,22 +1,48 @@
-
 .cases {
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    padding: 10rem 0;
+    padding: 8rem 0;
+    @include phone {
+        flex-direction: column;
+
+        div[class*="case-description"] {
+            margin: 0 auto;
+        }
+    }
+    @include desktop {
+        align-items: center;
+
+        div[class*="case-description"] {
+            align-self: flex-start;
+            order: 1;
+        }
+
+        div[class*="cases-prototype-"] {
+            order: 2;
+            flex: 2;
+        }
+
+        div[class*="case-details"] {
+            align-self: center;
+            order: 3;
+        }
+    }
 }
 
 .cases > div {
     flex: 1;
+    padding: 1rem 0 0;
 }
 
 .case-p {
-  img{
-    width: 75%;
-    display:block;
-    margin: 0 auto;
-  }
-  img[alt*="feature-image"]{
-      width: 100%;
-  }
+    img {
+        width: 75%;
+        display: block;
+        margin: 0 auto;
+    }
+
+    img[alt*="feature-image"] {
+        width: 100%;
+    }
 }
